<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_filter_date"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_filter_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info" />
</menu>