<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_event_image"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_marginLeft="@dimen/marginLogo"
        android:layout_marginTop="@dimen/marginLogo"
        android:layout_marginRight="@dimen/marginLogo"
        android:layout_marginBottom="@dimen/marginLogo"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_weight="1"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTextView"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>