...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="APLICAR"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
...
